--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -55,6 +55,7 @@
       <error statusCode="414" redirect="/Exception/urltoolong" />
       <error statusCode="503" redirect="/Exception/serviceunavailable" />
     </customErrors>
+    <trust level="Full" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
