--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -414,6 +414,7 @@
     <Content Include="Views\PackingSlip\Index.cshtml" />
     <Content Include="Views\Shared\Package\_LumberProductReview.cshtml" />
     <Content Include="Views\Shared\Package\_MiscellaneousProductReview.cshtml" />
+    <Content Include="Views\Account\ResetPassword.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
