--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -228,5 +228,11 @@
 			     be allowed in shared hosting environments. -->
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
+    <!-- SMTP server details, used so application can send email -->
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="smtpout.secureserver.net" defaultCredentials="true" />
+      </smtp>
+    </mailSettings>
   </system.net>
 </configuration>
