--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -19,10 +19,47 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;User ID=thermory;Password=Password01;Initial Catalog=Thermory;Trusted_Connection=False;Persist Security Info=True;Connection Timeout=600;" />
   </connectionStrings>
   <log4net>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{DATE} [%logger] %-5level  [T:%thread]- %message%newline%exception" />
-      </layout>
+    <appender name="ApplicationAdoNetAppender" type="log4net.Appender.AdoNetAppender">
+      <bufferSize value="1" />
+      <threshold value="ALL" />
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionStringName value="DefaultConnection" />
+      <commandText value="INSERT INTO ApplicationLog ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception)" />
+      <parameter>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.PatternLayout" value="%date{yyyy'-'MM'-'dd HH':'mm':'ss'.'fff}" />
+      </parameter>
+      <parameter>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout" value="%thread" />
+      </parameter>
+      <parameter>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
+        <layout type="log4net.Layout.PatternLayout" value="%level" />
+      </parameter>
+      <parameter>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout" value="%logger" />
+      </parameter>
+      <parameter>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="4000" />
+        <layout type="log4net.Layout.PatternLayout" value="%message" />
+      </parameter>
+      <parameter>
+        <parameterName value="@exception" />
+        <dbType value="String" />
+        <size value="2000" />
+        <layout type="log4net.Layout.PatternLayout" value="%exception" />
+      </parameter>
     </appender>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file type="log4net.Util.PatternString" value="application.log" />
@@ -37,7 +74,7 @@
     </appender>
     <root>
       <level value="DEBUG" />
-      <appender-ref ref="RollingFileAppender" />
+      <appender-ref ref="ApplicationAdoNetAppender" />
     </root>
   </log4net>
   <appSettings>
@@ -46,6 +83,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="log4net.Internal.Debug" value="true"/>
   </appSettings>
   <system.web>
     <customErrors mode="On" defaultRedirect="/Exception/error">
@@ -72,7 +110,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <sessionState mode="InProc" timeout="20"></sessionState>
+    <sessionState mode="SQLServer" allowCustomSqlDatabase="true" sqlConnectionString="DefaultConnection" timeout="60"></sessionState>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -83,7 +121,7 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    
+
     <staticContent>
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
@@ -184,42 +222,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <dotNetOpenAuth>
-    <!-- This is an optional configuration section where aspects of dotnetopenauth can be customized. -->
-    <!-- For a complete set of configuration options see http://www.dotnetopenauth.net/developers/code-snippets/configuration-options/ -->
-    <openid>
-      <relyingParty>
-        <security requireSsl="false">
-          <!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
-          <!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
-						<add endpoint="https://www.google.com/accounts/o8/ud" />
-					</trustedProviders>-->
-        </security>
-        <behaviors>
-          <!-- The following OPTIONAL behavior allows RPs to use SREG only, but be compatible
-					     with OPs that use Attribute Exchange (in various formats). -->
-          <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
-        </behaviors>
-      </relyingParty>
-    </openid>
-    <messaging>
-      <untrustedWebRequest>
-        <whitelistHosts>
-          <!-- Uncomment to enable communication with localhost (should generally not activate in production!) -->
-          <!--<add name="localhost" />-->
-        </whitelistHosts>
-      </untrustedWebRequest>
-    </messaging>
-    <!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
-    <reporting enabled="true" />
-  </dotNetOpenAuth>
-  <uri>
-    <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
-		     which is necessary for OpenID urls with unicode characters in the domain/host name.
-		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
-    <idn enabled="All" />
-    <iriParsing enabled="true" />
-  </uri>
   <system.net>
     <defaultProxy enabled="true" />
     <settings>
