--- a/Thermory.Data.Test/App.config
+++ b/Thermory.Data.Test/App.config
@@ -14,14 +14,20 @@
     </providers>
   </entityFramework>
   <log4net>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="application.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="5" />
+      <maximumFileSize value="1MB" />
+      <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{DATE} [%logger] %-5level  [T:%thread]- %message%newline%exception" />
+        <conversionPattern value="%utcdate [%logger] %-5level  [T:%thread]- %message%newline%exception" />
       </layout>
     </appender>
     <root>
       <level value="DEBUG" />
-      <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
 </configuration>
