Reverted GetAllLumberCategories query. Added Address model to support multiple Customer addresses. Eliminated logging an order transaction if no order quantites were changed.

--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Constants\OrderStatusNames.cs" />
     <Compile Include="Constants\Role.cs" />
     <Compile Include="Enums\OrderStatuses.cs" />
+    <Compile Include="Models\Address.cs" />
     <Compile Include="Models\IViewModel.cs" />
     <Compile Include="Models\Package.cs" />
     <Compile Include="Models\PackageLumberLineItem.cs" />
