--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Commands\GetAllRoles.cs" />
     <Compile Include="Commands\GetPackageById.cs" />
     <Compile Include="Commands\GetUserRolesByUserId.cs" />
+    <Compile Include="Commands\SaveCustomerAddress.cs" />
     <Compile Include="Commands\SaveLumberCategory.cs" />
     <Compile Include="Commands\SaveLumberProduct.cs" />
     <Compile Include="Commands\SaveLumberSubCategory.cs" />
