Updated production smtp server settings.

--- a/Thermory.Web/Web.Release.config
+++ b/Thermory.Web/Web.Release.config
@@ -6,4 +6,12 @@
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=184.168.194.75;User=Inventory14;Password=htO081*x;Initial Catalog=Thermory;Trusted_Connection=False;Persist Security Info=True;Connection Timeout=600;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
+  <system.net>
+    <!-- SMTP server details, used so application can send email -->
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="smtpout.secureserver.net" defaultCredentials="false" userName="thermoryinventory@thermoryinventory.com" password="Jackson5" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
