--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -234,7 +234,7 @@
     <!-- SMTP server details, used so application can send email -->
     <mailSettings>
       <smtp deliveryMethod="Network">
-        <network host="smtpout.secureserver.net" defaultCredentials="true" />
+        <network host="smtpout.secureserver.net" defaultCredentials="false" userName="thermoryinventory@thermoryinventory.com" password="Jackson5" />
       </smtp>
     </mailSettings>
   </system.net>
