Completed include in calculations feature.

--- a/Thermory.Web/Web.Release.config
+++ b/Thermory.Web/Web.Release.config
@@ -6,4 +6,6 @@
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=184.168.194.75;User=Inventory14;Password=htO081*x;Initial Catalog=Thermory;Trusted_Connection=False;Persist Security Info=True;Connection Timeout=600;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
+  <add key="UseAppKeepAlive" value="true" />
+  <add key="AppKeepAliveUrl" value="http://thermoryinventory.com" />
 </configuration>
