--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Commands\GetOrderById.cs" />
     <Compile Include="Commands\GetInventoryTransactionsByOrderId.cs" />
     <Compile Include="Commands\GetAllRoles.cs" />
+    <Compile Include="Commands\GetOrderStatusSummary.cs" />
     <Compile Include="Commands\GetPackageById.cs" />
     <Compile Include="Commands\GetUserRolesByUserId.cs" />
     <Compile Include="Commands\SaveCustomerAddress.cs" />
