--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -255,7 +255,6 @@
     <Compile Include="Models\TransactionDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionVariables.cs" />
-    <None Include="Views\Shared\Order\_OutstandingPurchaseOrders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -345,7 +344,6 @@
     <Content Include="Scripts\thermory.js" />
     <Content Include="Scripts\w2ui-1.4.3.js" />
     <Content Include="Scripts\w2ui-1.4.3.min.js" />
-    <None Include="Views\Shared\Order\_OutstandingSalesOrders.cshtml" />
     <Content Include="Web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -414,6 +412,8 @@
     <Content Include="Views\PackingSlip\Index.cshtml" />
     <Content Include="Views\Shared\Package\_LumberProductReview.cshtml" />
     <Content Include="Views\Shared\Package\_MiscellaneousProductReview.cshtml" />
+    <Content Include="Views\Shared\Order\_OutstandingPurchaseOrders.cshtml" />
+    <Content Include="Views\Shared\Order\_OutstandingSalesOrders.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
