Completed forgot password functionality.

--- a/Thermory.Web/Web.Release.config
+++ b/Thermory.Web/Web.Release.config
@@ -10,7 +10,7 @@
     <!-- SMTP server details, used so application can send email -->
     <mailSettings>
       <smtp deliveryMethod="Network">
-        <network host="smtpout.secureserver.net" defaultCredentials="false" userName="thermoryinventory@thermoryinventory.com" password="Jackson5" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+        <network host="smtpout.secureserver.net" defaultCredentials="false" userName="inventory@thermoryinventory.com" password="Jackson5" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
       </smtp>
     </mailSettings>
   </system.net>
