--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -203,7 +203,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="AuthorizeAttribute.cs" />
+    <Compile Include="Attributes\AjaxValidateAntiForgeryTokenAttribute.cs" />
+    <Compile Include="Attributes\AuthorizeAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\OrderGridController.cs" />
     <Compile Include="Controllers\Api\SalesOrderGridController.cs" />
@@ -219,7 +220,7 @@
     <Compile Include="Controllers\PurchaseOrderController.cs" />
     <Compile Include="Controllers\SalesOrderController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="CustomHandleErrorAttribute.cs" />
+    <Compile Include="Attributes\CustomHandleErrorAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -254,6 +255,7 @@
     <Compile Include="Models\Status\WarningLabel.cs" />
     <Compile Include="Models\TransactionDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HttpRequestBaseExtensions.cs" />
     <Compile Include="SessionVariables.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -346,6 +348,7 @@
     <Content Include="Scripts\w2ui-1.4.3.min.js" />
     <Content Include="Web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -415,6 +418,7 @@
     <Content Include="Views\Shared\Order\_OutstandingPurchaseOrders.cshtml" />
     <Content Include="Views\Shared\Order\_OutstandingSalesOrders.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
+    <Content Include="Views\Account\ForgotPassword.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
