--- a/Thermory.Business.Test/App.config
+++ b/Thermory.Business.Test/App.config
@@ -17,7 +17,7 @@
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network">
-        <network host="smtpout.secureserver.net" defaultCredentials="false" userName="thermoryinventory@thermoryinventory.com" password="Jackson5" />
+        <network host="smtpout.secureserver.net" defaultCredentials="false" userName="inventory@thermoryinventory.com" password="Jackson5" />
       </smtp>
     </mailSettings>
   </system.net>
