--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ packages/*
 # This line needs to be after the ignore of the build folder
 # (and the packages folder if the line above has been uncommented)
 !packages/build/
+*.dbmdl
+*.jfm
