#86 Added Lumber Category sort reordering. Need to refactor stored proecedure calling logic and allow selecting sort order when creating new catalog items.

--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -83,6 +83,7 @@
     <Compile Include="CommandBuilders\OrderBuilder.cs" />
     <Compile Include="CommandBuilders\PullOrderBuilder.cs" />
     <Compile Include="CommandBuilders\ReceiveOrderBuilder.cs" />
+    <Compile Include="CommandBuilders\SaveLumberCategoryBuilder.cs" />
     <Compile Include="CommandBuilders\UpdateUserRolesBuilder.cs" />
     <Compile Include="CommandBuilders\WarehouseReceviedOrderBuilder.cs" />
     <Compile Include="Commands\AdjustLumberProductQuantity.cs" />
