#86 Creating a new Lumber Category allows the user to set the sort order. This was broken by the change to using a stored procedure because the model wasn't being updated.

--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Commands\GetAllOrderTypes.cs" />
     <Compile Include="Commands\GetAllPackagingTypes.cs" />
     <Compile Include="Commands\GetAllTransactionTypes.cs" />
+    <Compile Include="Commands\GetLumberCategoryByName.cs" />
     <Compile Include="Commands\GetOrderById.cs" />
     <Compile Include="Commands\GetInventoryTransactionsByOrderId.cs" />
     <Compile Include="Commands\GetAllRoles.cs" />
