--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.0.0",
+  "name": "thermory-lumber",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "jquery": "^3.3.1",
+    "jquery-ui": "^3.3.1",
+    "w2ui": "^1.4.3",
+    "bootstrap-4": "^4.0.0",
     "core-js": "^2.4.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
