--- a/Thermory.Web.Api.Tests/Thermory.Web.Api.Tests.csproj
+++ b/Thermory.Web.Api.Tests/Thermory.Web.Api.Tests.csproj
@@ -102,8 +102,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -116,6 +114,9 @@
       <Project>{532AA23A-5109-4E65-8363-C9FF086C96BD}</Project>
       <Name>Thermory.Web.Api</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
