--- a/Thermory.Web.Api/Thermory.Web.Api.csproj
+++ b/Thermory.Web.Api/Thermory.Web.Api.csproj
@@ -51,6 +51,9 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.2.4.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
     </Reference>
@@ -190,20 +193,40 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Attributes\ApiExceptionAttribute.cs" />
+    <Compile Include="Attributes\LoggingAttribute.cs" />
+    <Compile Include="Attributes\SortableAttribute.cs" />
+    <Compile Include="Attributes\SupportsPagingAttribute.cs" />
+    <Compile Include="Attributes\SwaggerImplementationNotesAttribute.cs" />
     <Compile Include="Attributes\ValidateModelAttribute.cs" />
+    <Compile Include="Constants\Links.cs" />
+    <Compile Include="Constants\Pagination.cs" />
     <Compile Include="Constants\Responses.cs" />
+    <Compile Include="Constants\Sorting.cs" />
     <Compile Include="Constants\Versions.cs" />
-    <Compile Include="Controllers\BaseApicontroller.cs" />
+    <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\V1\LumberCategoryV1Controller.cs" />
     <Compile Include="Exceptions\CustomHttpException.cs" />
-    <Compile Include="ExtensionMethods\ApiExtensions.cs" />
+    <Compile Include="Extensions\ApiExtensions.cs" />
+    <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
+    <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Responses\IApiResponse.cs" />
+    <Compile Include="Models\Responses\Link.cs" />
+    <Compile Include="Models\Responses\LinkedResource.cs" />
     <Compile Include="Models\Responses\LumberCategoryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Constants\Routes.cs" />
+    <Compile Include="Routing\LumberCategoryRoute.cs" />
+    <Compile Include="Routing\Route.cs" />
+    <Compile Include="Sorting\ISortConfig.cs" />
+    <Compile Include="Sorting\LumberCategorySortConfig.cs" />
+    <Compile Include="Sorting\SortConfig.cs" />
+    <Compile Include="Sorting\SortType.cs" />
+    <Compile Include="Swagger\OperationFilters\AddImplementationNotes.cs" />
+    <Compile Include="Swagger\OperationFilters\AddPagingParameters.cs" />
+    <Compile Include="Swagger\OperationFilters\AddSortingParameters.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
